--- a/CBRChalenge.html
+++ b/CBRChalenge.html
@@ -7,8 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="Kaas">
-        <h1>CBR</h1>
-    </div>
+    <header>
+        <h1>Header</h1>
+    </header>
+
+    <main>
+        <h2>Main</h2>
+    </main>
+
+    <footer>
+        <h3>Footer</h3>
+    </footer>
+
 </body>
 </html>
