--- a/CBRChalenge.html
+++ b/CBRChalenge.html
@@ -4,20 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="CBR.css">
-    <title>Document</title>
+    <title>CBRChalenge</title>
 </head>
-<body>
-    <header>
-        <h1>Header</h1>
-    </header>
-
-    <main>
-        <h2>Main</h2>
-    </main>
-
-    <footer>
-        <h3>Footer</h3>
-    </footer>
+<body> 
+    <div class="container">
+        
+    </div>
 
 </body>
 </html>
