--- a/CBRChalenge.html
+++ b/CBRChalenge.html
@@ -8,7 +8,25 @@
 </head>
 <body> 
     <div class="container">
-        
+        <nav>
+            <img src="images/logo.png" class="logo">
+            <ul>
+                <li><a href="#">Travel Guide</a></li>
+                <li><a href="#">Famous Places</a></li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>
+            <button class="btn"><img src="images/icon.png"> Bookings</button>
+        </nav>
+
+        <div class="content">
+            <h1>Difficult<br>questions!</h1>
+            <p>some BS I wil fix this later!</p>
+            <form>
+                <input type="text" placeholder="Made by Thida and Zaki!">
+                <button type="submit" class="btn">Search</button>
+            </form>
+        </div>
+
     </div>
 
 </body>
