--- a/CBRChalenge.html
+++ b/CBRChalenge.html
@@ -8,6 +8,7 @@
 </head>
 <body> 
     <div class="container">
+
         <nav>
             <img src="images/logo.png" class="logo">
             <ul>
@@ -18,9 +19,14 @@
             <button class="btn"><img src="images/icon.png"> Bookings</button>
         </nav>
 
+        <button class="button button--primary button--block">click</button>
+        <button class="button button--secondary button--block">click</button>
+        <button class="button button--accent button--block">click</button>
+        <button class="button button--outline button--block">click</button>
+
         <div class="content">
             <h1>Difficult<br>questions!</h1>
-            <p>some BS I wil fix this later!</p>
+            <p>Very Difficult quizes made by Zakaria and Thida hope you enjoy yourselfs!</p>
             <form>
                 <input type="text" placeholder="Made by Thida and Zaki!">
                 <button type="submit" class="btn">Search</button>
