--- a/CBRChalenge.html
+++ b/CBRChalenge.html
@@ -5,6 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="CBR.css">
     <title>CBRChalenge</title>
+
+    <!-----google fonts link--->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?
+    family=Work+Sans:wght@300;400;500;600;700;800;900&display=swap" rel=
+    "stylesheet">
+
+    <!-----boxicons link--->
+    <link rel="stylesheet"
+    href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+
 </head>
 <body> 
     <div class="container">
@@ -19,11 +31,6 @@
             <button class="btn"><img src="images/icon.png"> Bookings</button>
         </nav>
 
-        <button class="button button--primary button--block">click</button>
-        <button class="button button--secondary button--block">click</button>
-        <button class="button button--accent button--block">click</button>
-        <button class="button button--outline button--block">click</button>
-
         <div class="content">
             <h1>Difficult<br>questions!</h1>
             <p>Very Difficult quizes made by Zakaria and Thida hope you enjoy yourselfs!</p>
@@ -31,9 +38,37 @@
                 <input type="text" placeholder="Made by Thida and Zaki!">
                 <button type="submit" class="btn">Search</button>
             </form>
+
         </div>
 
+        <button class="button button--primary button--block">click</button>
+        <button class="button button--secondary button--block">click</button>
+        <button class="button button--accent button--block">click</button>
+        <button class="button button--outline button--block">click</button>
+
     </div>
+
+    <!-----footer section design--->
+    <section class="footer">
+        <div class="footer-content">
+            <img src="images/bxs-castle.svg">
+
+            <div class="icons">
+                <a href="#"><i class='bx bxl-facebook'></i></a>
+                <a href="#"><i class='bx bxl-twitter' ></i></a>
+                <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
+                <a href="#"><i class='bx bxl-youtube' ></i></a>
+            </div>
+
+            <div class="footer-content">
+                <h4>Projects</h4>
+                <li><a href="#">House</a></li>
+                <li><a href="#">Rooms</a></li>
+                <li><a href="#">Flats</a></li>
+                <li><a href="#">Appartments</a></li>
+            </div>
+        </div>
+    </section>
 
 </body>
 </html>
