--- a/CBRChalenge.html
+++ b/CBRChalenge.html
@@ -24,9 +24,9 @@
         <nav>
             <img src="images/logo.png" class="logo">
             <ul>
-                <li><a href="#">Travel Guide</a></li>
-                <li><a href="#">Famous Places</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Quiz awnsers</a></li>
+                <li><a href="#">About us</a></li>
+                <li><a href="#">Contact the devs</a></li>
             </ul>
             <button class="btn"><img src="images/icon.png"> Bookings</button>
         </nav>
@@ -52,6 +52,8 @@
     <section class="footer">
         <div class="footer-content">
             <img src="images/bxs-castle.svg">
+            <p>Now you know how to use HTML, CSS and JavaScript
+                to create, style.</p>
 
             <div class="icons">
                 <a href="#"><i class='bx bxl-facebook'></i></a>
@@ -66,6 +68,30 @@
                 <li><a href="#">Rooms</a></li>
                 <li><a href="#">Flats</a></li>
                 <li><a href="#">Appartments</a></li>
+            </div>
+
+            <div class="footer-content">
+                <h4>company</h4>
+                <li><a href="#">How we work</a></li>
+                <li><a href="#">Capital</a></li>
+                <li><a href="#">Security</a></li>
+                <li><a href="#">Sellings</a></li>
+            </div>
+
+            <div class="footer-content">
+                <h4>Movement</h4>
+                <li><a href="#">Movement</a></li>
+                <li><a href="#">Support us</a></li>
+                <li><a href="#">pricing</a></li>
+                <li><a href="#">Renting</a></li>
+            </div>
+
+            <div class="footer-content">
+                <h4>Help</h4>
+                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Condition</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">FAQs</a></li>
             </div>
         </div>
     </section>
