--- a/CBRChalenge.html
+++ b/CBRChalenge.html
@@ -51,9 +51,7 @@
     <!-----footer section design--->
     <section class="footer">
         <div class="footer-content">
-            <img src="images/bxs-castle.svg">
-            <p>Now you know how to use HTML, CSS and JavaScript
-                to create, style.</p>
+            <img class="castle" src="images/bxs-castle.svg">
 
             <div class="icons">
                 <a href="#"><i class='bx bxl-facebook'></i></a>
@@ -62,7 +60,7 @@
                 <a href="#"><i class='bx bxl-youtube' ></i></a>
             </div>
 
-            <div class="footer-content">
+            <div class="footer-contents">
                 <h4>Projects</h4>
                 <li><a href="#">House</a></li>
                 <li><a href="#">Rooms</a></li>
@@ -70,7 +68,7 @@
                 <li><a href="#">Appartments</a></li>
             </div>
 
-            <div class="footer-content">
+            <div class="footer-contents">
                 <h4>company</h4>
                 <li><a href="#">How we work</a></li>
                 <li><a href="#">Capital</a></li>
@@ -78,7 +76,7 @@
                 <li><a href="#">Sellings</a></li>
             </div>
 
-            <div class="footer-content">
+            <div class="footer-contents">
                 <h4>Movement</h4>
                 <li><a href="#">Movement</a></li>
                 <li><a href="#">Support us</a></li>
@@ -86,7 +84,7 @@
                 <li><a href="#">Renting</a></li>
             </div>
 
-            <div class="footer-content">
+            <div class="footer-contents">
                 <h4>Help</h4>
                 <li><a href="#">Privacy</a></li>
                 <li><a href="#">Condition</a></li>
