--- a/CBRChalenge.html
+++ b/CBRChalenge.html
@@ -24,8 +24,8 @@
         <nav>
             <img src="images/logo.png" class="logo">
             <ul>
-                <li><a href="#">Quiz awnsers</a></li>
-                <li><a href="#">About us</a></li>
+                <li><a href="https://www.buzzfeed.com/quizzes">Quiz awnsers</a></li>
+                <li><a href="Aboutus.html">About us</a></li>
                 <li><a href="#">Contact the devs</a></li>
             </ul>
             <button class="btn"><img src="images/icon.png"> Bookings</button>
