--- a/CBRChalenge.html
+++ b/CBRChalenge.html
@@ -41,10 +41,10 @@
 
         </div>
 
-        <button class="button button--primary button--block">click</button>
-        <button class="button button--secondary button--block">click</button>
-        <button class="button button--accent button--block">click</button>
-        <button class="button button--outline button--block">click</button>
+        <button a href="index.php" class="button button--primary button--block">click</button>
+        <button a href="index.php" class="button button--secondary button--block">click</button>
+        <button a href="index.php" class="button button--accent button--block">click</button>
+        <button a href="index.php" class="button button--outline button--block">click</button>
 
     </div>
 
