--- a/CBRChalenge.html
+++ b/CBRChalenge.html
@@ -41,10 +41,10 @@
 
         </div>
 
-        <button> <a href="index.php" class="button button--primary button--block">click </a></button>
-        <button> <a href="index.php" class="button button--secondary button--block">click </a></button>
-        <button> <a href="index.php" class="button button--accent button--block">click </a></button>
-        <button> <a href="index.php" class="button button--outline button--block">click </a></button>
+        <a href="index.php" class="button button--primary button--block">click </a>
+        <a href="index.php" class="button button--secondary button--block">click </a>
+        <a href="index.php" class="button button--accent button--block">click </a>
+        <a href="index.php" class="button button--outline button--block">click </a>
 
     </div>
 
