--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 
         </div>
 
-        <a href="index.php" class="button button--primary button--block">click </a>
-        <a href="index.php" class="button button--secondary button--block">click </a>
-        <a href="index.php" class="button button--accent button--block">click </a>
-        <a href="index.php" class="button button--outline button--block">click </a>
+        <a href="index.php" class="button button--primary button--block">Hoofdstuk 1 </a>
+        <a href="index.php" class="button button--secondary button--block">Hoofdstuk 2 </a>
+        <a href="index.php" class="button button--accent button--block">Hoofdstuk 3 </a>
+        <a href="index.php" class="button button--outline button--block">Hoofdstuk 4 </a>
 
     </div>
 
