--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
 
             <div class="footer-contents">
                 <h4>Projects</h4>
-                <li><a href="#">House</a></li>
-                <li><a href="#">Rooms</a></li>
-                <li><a href="#">Flats</a></li>
-                <li><a href="#">Appartments</a></li>
+                <li><a href="#">Us</a></li>
+                <li><a href="#">how</a></li>
+                <li><a href="#">why</a></li>
+                <li><a href="#">Future</a></li>
             </div>
 
             <div class="footer-contents">
@@ -81,7 +81,7 @@
                 <li><a href="#">Movement</a></li>
                 <li><a href="#">Support us</a></li>
                 <li><a href="#">pricing</a></li>
-                <li><a href="#">Renting</a></li>
+                <li><a href="#">Quizes</a></li>
             </div>
 
             <div class="footer-contents">
