--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <ul>
                 <li><a href="https://www.buzzfeed.com/quizzes">Quiz awnsers</a></li>
                 <li><a href="Aboutus.html">About us</a></li>
-                <li><a href="#">Contact the devs</a></li>
+                <li><a href="Phonenumber.html">Contact the devs</a></li>
             </ul>
             <button class="btn"><img src="images/icon.png"> Bookings</button>
         </nav>
